--- a/custom-tab-bar/index.wxml
+++ b/custom-tab-bar/index.wxml
@@ -1,7 +1,11 @@
 <view class="tab-bar">
   <view class="tab-bar-border"></view>
   <view wx:for="{{list}}" wx:key="index" class="tab-bar-item" data-path="{{item.pagePath}}" data-index="{{index}}" bindtap="switchTab">
-    <image class="tab-bar-icon" src="{{selected === index ? item.selectedIconPath : item.iconPath}}"></image>
+    <view class="tab-bar-icon-wrapper">
+      <image class="tab-bar-icon" src="{{selected === index ? item.selectedIconPath : item.iconPath}}"></image>
+      <!-- 第三个tab（5460消息）显示未读角标 -->
+      <view wx:if="{{index === 2 && unreadCount > 0}}" class="tab-bar-badge">{{unreadCount > 99 ? '99+' : unreadCount}}</view>
+    </view>
     <view class="tab-bar-text" style="color: {{selected === index ? selectedColor : color}}">{{item.text}}</view>
   </view>
 </view>
