--- a/custom-tab-bar/index.wxss
+++ b/custom-tab-bar/index.wxss
@@ -28,10 +28,34 @@
   padding: 10rpx 0;
 }
 
+.tab-bar-icon-wrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .tab-bar-icon {
   width: 52rpx;
   height: 52rpx;
   margin-bottom: 8rpx;
+}
+
+.tab-bar-badge {
+  position: absolute;
+  top: -8rpx;
+  right: -20rpx;
+  min-width: 32rpx;
+  height: 32rpx;
+  padding: 0 8rpx;
+  background-color: #ff4d4f;
+  color: #ffffff;
+  font-size: 20rpx;
+  font-weight: 500;
+  line-height: 32rpx;
+  text-align: center;
+  border-radius: 16rpx;
+  box-sizing: border-box;
 }
 
 .tab-bar-text {
