--- a/pages/audit/merchant/apply/apply.wxml
+++ b/pages/audit/merchant/apply/apply.wxml
@@ -1,5 +1,5 @@
 <!--pages/audit/merchant/apply/apply.wxml-->
-<custom-nav-bar showBack="{{true}}" useAuditStyle="{{true}}" auditTitle="商户管理">
+<custom-nav-bar showBack="{{true}}" useAuditStyle="{{true}}" auditTitle="商户审核">
 <view class="page">
   <view class="group_7">
     <view class="list-header">
